# Succinct-SuccInverse-Bird-Game

./: README.md  game.js  global.css  https_server.py  index.html  style.css
prove-server/: README.md
prove-server/program/: Cargo.toml
prove-server/program/src/: 11test_main.11rs1  main.rs
prove-server/script/: Cargo.toml
