[package]
version = "0.1.0"
name = "flappy-bird-script"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "4.0.0"
sp1-zkvm = "4.0.0"
sp1-verifier = { version = "4.0.0", default-features = false }
tracing = "0.1.40"
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3" # bincode’un stabil bir sürümü
tokio = { version = "1.40", features = ["full"] }
hex = "0.4.3"
tower-http = { version = "0.5", features = ["cors"] } # Eklendi
base64 = "0.13" # base64 bağımlılığını ekleyin

[build-dependencies]
sp1-build = "4.0.0" # build.rs için gerekli